--- a/playshop/src/Mobile.css
+++ b/playshop/src/Mobile.css
@@ -1,4 +1,9 @@
 @media only screen and (max-width: 777px) {
+    .top {
+        overflow-x: hidden;
+        position: absolute;
+      }
+      
     ::-webkit-scrollbar {
         width: 0px;  /* remove scrollbar space */
         background: transparent;  /* optional: just make scrollbar invisible */
@@ -138,7 +143,7 @@
     }
 
     .summaryRow path {
-        stroke-dashoffset: 0px;
+        /* stroke-dashoffset: 0px; */
         opacity: 1;
     }
     .summaryRow .backPath path {
@@ -197,10 +202,6 @@
         text-transform: uppercase;
         font-weight: bold;
     }
-    
-    .App {
-        /* overflow: hidden; */
-    }
 
     .heroText {
         top: 30px;
@@ -226,6 +227,7 @@
 
     .summaryBackground {
         background: none;
+        overflow: hidden;
     }
 
     .summaryBackground svg {
@@ -295,6 +297,10 @@
 
     .workshopCardsContainer h1 {
         margin: 60px 20px;
+    }
+    
+    .contactContainer h1 {
+        margin: 40px 20px 80px;
     }
 
     .popUp svg {
